package renamed to linchpin-info-beamer

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Confluence Info-Beamer",
+    "name": "Linchpin Info-Beamer",
     "author": "fkunsmann@seibert-media.net",
     "desc": "Shows Corporate News Feed",
     "repository": "https://github.com/seibert-media/confluence-info-beamer",
